Updated readme to begin Unit 2

--- a/README
+++ b/README
@@ -1,2 +1,10 @@
 Edward A McWhirter Jr. (Eddie McWhirter)
 Drop zone for assignments and work associated with CSCI 446 OL, Web Applications II
+
+= Unit 1 =
+- Open src/first_project/SassyPage.html in a browser
+- Style changes were made in src/first_project/sass/screen.scss
+- I don't think the custom font is working
+
+= Unit 2 =
+-
